libqt6c/src/libqslider.hpp

#pragma once
#ifndef SRCC_LIBQSLIDER_HPP
#define SRCC_LIBQSLIDER_HPP

#include <stdbool.h>
#include <stddef.h>

#pragma GCC diagnostic ignored "-Wdeprecated-declarations"

#include "qtlibc.h"

#ifdef __cplusplus
extern "C" {
#endif

#ifdef __cplusplus
#else
typedef struct QAbstractSlider QAbstractSlider;
typedef struct QActionEvent QActionEvent;
typedef struct QChildEvent QChildEvent;
typedef struct QCloseEvent QCloseEvent;
typedef struct QContextMenuEvent QContextMenuEvent;
typedef struct QDragEnterEvent QDragEnterEvent;
typedef struct QDragLeaveEvent QDragLeaveEvent;
typedef struct QDragMoveEvent QDragMoveEvent;
typedef struct QDropEvent QDropEvent;
typedef struct QEnterEvent QEnterEvent;
typedef struct QEvent QEvent;
typedef struct QFocusEvent QFocusEvent;
typedef struct QHideEvent QHideEvent;
typedef struct QInputMethodEvent QInputMethodEvent;
typedef struct QKeyEvent QKeyEvent;
typedef struct QMetaMethod QMetaMethod;
typedef struct QMetaObject QMetaObject;
typedef struct QMouseEvent QMouseEvent;
typedef struct QMoveEvent QMoveEvent;
typedef struct QObject QObject;
typedef struct QPaintDevice QPaintDevice;
typedef struct QPaintEngine QPaintEngine;
typedef struct QPaintEvent QPaintEvent;
typedef struct QPainter QPainter;
typedef struct QPoint QPoint;
typedef struct QResizeEvent QResizeEvent;
typedef struct QShowEvent QShowEvent;
typedef struct QSize QSize;
typedef struct QSlider QSlider;
typedef struct QStyleOptionSlider QStyleOptionSlider;
typedef struct QTabletEvent QTabletEvent;
typedef struct QTimerEvent QTimerEvent;
typedef struct QVariant QVariant;
typedef struct QWheelEvent QWheelEvent;
typedef struct QWidget QWidget;
#endif

QSlider* QSlider_new(QWidget* parent);
QSlider* QSlider_new2();
QSlider* QSlider_new3(int orientation);
QSlider* QSlider_new4(int orientation, QWidget* parent);
QMetaObject* QSlider_MetaObject(const QSlider* self);
void* QSlider_Metacast(QSlider* self, const char* param1);
int QSlider_Metacall(QSlider* self, int param1, int param2, void** param3);
QSize* QSlider_SizeHint(const QSlider* self);
QSize* QSlider_MinimumSizeHint(const QSlider* self);
void QSlider_SetTickPosition(QSlider* self, int position);
int QSlider_TickPosition(const QSlider* self);
void QSlider_SetTickInterval(QSlider* self, int ti);
int QSlider_TickInterval(const QSlider* self);
bool QSlider_Event(QSlider* self, QEvent* event);
void QSlider_PaintEvent(QSlider* self, QPaintEvent* ev);
void QSlider_MousePressEvent(QSlider* self, QMouseEvent* ev);
void QSlider_MouseReleaseEvent(QSlider* self, QMouseEvent* ev);
void QSlider_MouseMoveEvent(QSlider* self, QMouseEvent* ev);
void QSlider_InitStyleOption(const QSlider* self, QStyleOptionSlider* option);
void QSlider_OnMetaObject(const QSlider* self, intptr_t slot);
QMetaObject* QSlider_SuperMetaObject(const QSlider* self);
void QSlider_OnMetacast(QSlider* self, intptr_t slot);
void* QSlider_SuperMetacast(QSlider* self, const char* param1);
void QSlider_OnMetacall(QSlider* self, intptr_t slot);
int QSlider_SuperMetacall(QSlider* self, int param1, int param2, void** param3);
void QSlider_OnSizeHint(const QSlider* self, intptr_t slot);
QSize* QSlider_SuperSizeHint(const QSlider* self);
void QSlider_OnMinimumSizeHint(const QSlider* self, intptr_t slot);
QSize* QSlider_SuperMinimumSizeHint(const QSlider* self);
void QSlider_OnEvent(QSlider* self, intptr_t slot);
bool QSlider_SuperEvent(QSlider* self, QEvent* event);
void QSlider_OnPaintEvent(QSlider* self, intptr_t slot);
void QSlider_SuperPaintEvent(QSlider* self, QPaintEvent* ev);
void QSlider_OnMousePressEvent(QSlider* self, intptr_t slot);
void QSlider_SuperMousePressEvent(QSlider* self, QMouseEvent* ev);
void QSlider_OnMouseReleaseEvent(QSlider* self, intptr_t slot);
void QSlider_SuperMouseReleaseEvent(QSlider* self, QMouseEvent* ev);
void QSlider_OnMouseMoveEvent(QSlider* self, intptr_t slot);
void QSlider_SuperMouseMoveEvent(QSlider* self, QMouseEvent* ev);
void QSlider_OnInitStyleOption(const QSlider* self, intptr_t slot);
void QSlider_SuperInitStyleOption(const QSlider* self, QStyleOptionSlider* option);
void QSlider_SliderChange(QSlider* self, int change);
void QSlider_OnSliderChange(QSlider* self, intptr_t slot);
void QSlider_SuperSliderChange(QSlider* self, int change);
void QSlider_KeyPressEvent(QSlider* self, QKeyEvent* ev);
void QSlider_OnKeyPressEvent(QSlider* self, intptr_t slot);
void QSlider_SuperKeyPressEvent(QSlider* self, QKeyEvent* ev);
void QSlider_TimerEvent(QSlider* self, QTimerEvent* param1);
void QSlider_OnTimerEvent(QSlider* self, intptr_t slot);
void QSlider_SuperTimerEvent(QSlider* self, QTimerEvent* param1);
void QSlider_WheelEvent(QSlider* self, QWheelEvent* e);
void QSlider_OnWheelEvent(QSlider* self, intptr_t slot);
void QSlider_SuperWheelEvent(QSlider* self, QWheelEvent* e);
void QSlider_ChangeEvent(QSlider* self, QEvent* e);
void QSlider_OnChangeEvent(QSlider* self, intptr_t slot);
void QSlider_SuperChangeEvent(QSlider* self, QEvent* e);
int QSlider_DevType(const QSlider* self);
void QSlider_OnDevType(const QSlider* self, intptr_t slot);
int QSlider_SuperDevType(const QSlider* self);
void QSlider_SetVisible(QSlider* self, bool visible);
void QSlider_OnSetVisible(QSlider* self, intptr_t slot);
void QSlider_SuperSetVisible(QSlider* self, bool visible);
int QSlider_HeightForWidth(const QSlider* self, int param1);
void QSlider_OnHeightForWidth(const QSlider* self, intptr_t slot);
int QSlider_SuperHeightForWidth(const QSlider* self, int param1);
bool QSlider_HasHeightForWidth(const QSlider* self);
void QSlider_OnHasHeightForWidth(const QSlider* self, intptr_t slot);
bool QSlider_SuperHasHeightForWidth(const QSlider* self);
QPaintEngine* QSlider_PaintEngine(const QSlider* self);
void QSlider_OnPaintEngine(const QSlider* self, intptr_t slot);
QPaintEngine* QSlider_SuperPaintEngine(const QSlider* self);
void QSlider_MouseDoubleClickEvent(QSlider* self, QMouseEvent* event);
void QSlider_OnMouseDoubleClickEvent(QSlider* self, intptr_t slot);
void QSlider_SuperMouseDoubleClickEvent(QSlider* self, QMouseEvent* event);
void QSlider_KeyReleaseEvent(QSlider* self, QKeyEvent* event);
void QSlider_OnKeyReleaseEvent(QSlider* self, intptr_t slot);
void QSlider_SuperKeyReleaseEvent(QSlider* self, QKeyEvent* event);
void QSlider_FocusInEvent(QSlider* self, QFocusEvent* event);
void QSlider_OnFocusInEvent(QSlider* self, intptr_t slot);
void QSlider_SuperFocusInEvent(QSlider* self, QFocusEvent* event);
void QSlider_FocusOutEvent(QSlider* self, QFocusEvent* event);
void QSlider_OnFocusOutEvent(QSlider* self, intptr_t slot);
void QSlider_SuperFocusOutEvent(QSlider* self, QFocusEvent* event);
void QSlider_EnterEvent(QSlider* self, QEnterEvent* event);
void QSlider_OnEnterEvent(QSlider* self, intptr_t slot);
void QSlider_SuperEnterEvent(QSlider* self, QEnterEvent* event);
void QSlider_LeaveEvent(QSlider* self, QEvent* event);
void QSlider_OnLeaveEvent(QSlider* self, intptr_t slot);
void QSlider_SuperLeaveEvent(QSlider* self, QEvent* event);
void QSlider_MoveEvent(QSlider* self, QMoveEvent* event);
void QSlider_OnMoveEvent(QSlider* self, intptr_t slot);
void QSlider_SuperMoveEvent(QSlider* self, QMoveEvent* event);
void QSlider_ResizeEvent(QSlider* self, QResizeEvent* event);
void QSlider_OnResizeEvent(QSlider* self, intptr_t slot);
void QSlider_SuperResizeEvent(QSlider* self, QResizeEvent* event);
void QSlider_CloseEvent(QSlider* self, QCloseEvent* event);
void QSlider_OnCloseEvent(QSlider* self, intptr_t slot);
void QSlider_SuperCloseEvent(QSlider* self, QCloseEvent* event);
void QSlider_ContextMenuEvent(QSlider* self, QContextMenuEvent* event);
void QSlider_OnContextMenuEvent(QSlider* self, intptr_t slot);
void QSlider_SuperContextMenuEvent(QSlider* self, QContextMenuEvent* event);
void QSlider_TabletEvent(QSlider* self, QTabletEvent* event);
void QSlider_OnTabletEvent(QSlider* self, intptr_t slot);
void QSlider_SuperTabletEvent(QSlider* self, QTabletEvent* event);
void QSlider_ActionEvent(QSlider* self, QActionEvent* event);
void QSlider_OnActionEvent(QSlider* self, intptr_t slot);
void QSlider_SuperActionEvent(QSlider* self, QActionEvent* event);
void QSlider_DragEnterEvent(QSlider* self, QDragEnterEvent* event);
void QSlider_OnDragEnterEvent(QSlider* self, intptr_t slot);
void QSlider_SuperDragEnterEvent(QSlider* self, QDragEnterEvent* event);
void QSlider_DragMoveEvent(QSlider* self, QDragMoveEvent* event);
void QSlider_OnDragMoveEvent(QSlider* self, intptr_t slot);
void QSlider_SuperDragMoveEvent(QSlider* self, QDragMoveEvent* event);
void QSlider_DragLeaveEvent(QSlider* self, QDragLeaveEvent* event);
void QSlider_OnDragLeaveEvent(QSlider* self, intptr_t slot);
void QSlider_SuperDragLeaveEvent(QSlider* self, QDragLeaveEvent* event);
void QSlider_DropEvent(QSlider* self, QDropEvent* event);
void QSlider_OnDropEvent(QSlider* self, intptr_t slot);
void QSlider_SuperDropEvent(QSlider* self, QDropEvent* event);
void QSlider_ShowEvent(QSlider* self, QShowEvent* event);
void QSlider_OnShowEvent(QSlider* self, intptr_t slot);
void QSlider_SuperShowEvent(QSlider* self, QShowEvent* event);
void QSlider_HideEvent(QSlider* self, QHideEvent* event);
void QSlider_OnHideEvent(QSlider* self, intptr_t slot);
void QSlider_SuperHideEvent(QSlider* self, QHideEvent* event);
bool QSlider_NativeEvent(QSlider* self, const libqt_string eventType, void* message, intptr_t* result);
void QSlider_OnNativeEvent(QSlider* self, intptr_t slot);
bool QSlider_SuperNativeEvent(QSlider* self, const libqt_string eventType, void* message, intptr_t* result);
int QSlider_Metric(const QSlider* self, int param1);
void QSlider_OnMetric(const QSlider* self, intptr_t slot);
int QSlider_SuperMetric(const QSlider* self, int param1);
void QSlider_InitPainter(const QSlider* self, QPainter* painter);
void QSlider_OnInitPainter(const QSlider* self, intptr_t slot);
void QSlider_SuperInitPainter(const QSlider* self, QPainter* painter);
QPaintDevice* QSlider_Redirected(const QSlider* self, QPoint* offset);
void QSlider_OnRedirected(const QSlider* self, intptr_t slot);
QPaintDevice* QSlider_SuperRedirected(const QSlider* self, QPoint* offset);
QPainter* QSlider_SharedPainter(const QSlider* self);
void QSlider_OnSharedPainter(const QSlider* self, intptr_t slot);
QPainter* QSlider_SuperSharedPainter(const QSlider* self);
void QSlider_InputMethodEvent(QSlider* self, QInputMethodEvent* param1);
void QSlider_OnInputMethodEvent(QSlider* self, intptr_t slot);
void QSlider_SuperInputMethodEvent(QSlider* self, QInputMethodEvent* param1);
QVariant* QSlider_InputMethodQuery(const QSlider* self, int param1);
void QSlider_OnInputMethodQuery(const QSlider* self, intptr_t slot);
QVariant* QSlider_SuperInputMethodQuery(const QSlider* self, int param1);
bool QSlider_FocusNextPrevChild(QSlider* self, bool next);
void QSlider_OnFocusNextPrevChild(QSlider* self, intptr_t slot);
bool QSlider_SuperFocusNextPrevChild(QSlider* self, bool next);
bool QSlider_EventFilter(QSlider* self, QObject* watched, QEvent* event);
void QSlider_OnEventFilter(QSlider* self, intptr_t slot);
bool QSlider_SuperEventFilter(QSlider* self, QObject* watched, QEvent* event);
void QSlider_ChildEvent(QSlider* self, QChildEvent* event);
void QSlider_OnChildEvent(QSlider* self, intptr_t slot);
void QSlider_SuperChildEvent(QSlider* self, QChildEvent* event);
void QSlider_CustomEvent(QSlider* self, QEvent* event);
void QSlider_OnCustomEvent(QSlider* self, intptr_t slot);
void QSlider_SuperCustomEvent(QSlider* self, QEvent* event);
void QSlider_ConnectNotify(QSlider* self, const QMetaMethod* signal);
void QSlider_OnConnectNotify(QSlider* self, intptr_t slot);
void QSlider_SuperConnectNotify(QSlider* self, const QMetaMethod* signal);
void QSlider_DisconnectNotify(QSlider* self, const QMetaMethod* signal);
void QSlider_OnDisconnectNotify(QSlider* self, intptr_t slot);
void QSlider_SuperDisconnectNotify(QSlider* self, const QMetaMethod* signal);
void QSlider_SetRepeatAction(QSlider* self, int action);
void QSlider_OnSetRepeatAction(QSlider* self, intptr_t slot);
void QSlider_SuperSetRepeatAction(QSlider* self, int action);
int QSlider_RepeatAction(const QSlider* self);
void QSlider_OnRepeatAction(const QSlider* self, intptr_t slot);
int QSlider_SuperRepeatAction(const QSlider* self);
void QSlider_UpdateMicroFocus(QSlider* self);
void QSlider_OnUpdateMicroFocus(QSlider* self, intptr_t slot);
void QSlider_SuperUpdateMicroFocus(QSlider* self);
void QSlider_Create(QSlider* self);
void QSlider_OnCreate(QSlider* self, intptr_t slot);
void QSlider_SuperCreate(QSlider* self);
void QSlider_Destroy(QSlider* self);
void QSlider_OnDestroy(QSlider* self, intptr_t slot);
void QSlider_SuperDestroy(QSlider* self);
bool QSlider_FocusNextChild(QSlider* self);
void QSlider_OnFocusNextChild(QSlider* self, intptr_t slot);
bool QSlider_SuperFocusNextChild(QSlider* self);
bool QSlider_FocusPreviousChild(QSlider* self);
void QSlider_OnFocusPreviousChild(QSlider* self, intptr_t slot);
bool QSlider_SuperFocusPreviousChild(QSlider* self);
QObject* QSlider_Sender(const QSlider* self);
void QSlider_OnSender(const QSlider* self, intptr_t slot);
QObject* QSlider_SuperSender(const QSlider* self);
int QSlider_SenderSignalIndex(const QSlider* self);
void QSlider_OnSenderSignalIndex(const QSlider* self, intptr_t slot);
int QSlider_SuperSenderSignalIndex(const QSlider* self);
int QSlider_Receivers(const QSlider* self, const char* signal);
void QSlider_OnReceivers(const QSlider* self, intptr_t slot);
int QSlider_SuperReceivers(const QSlider* self, const char* signal);
bool QSlider_IsSignalConnected(const QSlider* self, const QMetaMethod* signal);
void QSlider_OnIsSignalConnected(const QSlider* self, intptr_t slot);
bool QSlider_SuperIsSignalConnected(const QSlider* self, const QMetaMethod* signal);
void QSlider_Delete(QSlider* self);

#ifdef __cplusplus
} /* extern C */
#endif

#endif